# claude-p2p-remote

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GETTING_STARTED.md  README.md
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs
daemon/src/config/: auth.rs  mod.rs
daemon/src/fs/: mod.rs  service.rs
daemon/src/protocol/: message.rs  mod.rs
daemon/src/session/: claude.rs  manager.rs  mod.rs
daemon/src/webrtc/: connection.rs  media.rs  mod.rs  signaling.rs
mobile-app/: index.html  package.json
mobile-app/src/: main.ts  webrtc.ts
mobile-app/src-tauri/: Cargo.toml  tauri.conf.json
mobile-app/src-tauri/src/: lib.rs  main.rs
signaling/: Cargo.toml
signaling/src/: lib.rs  main.rs
