[package]
name = "p2p-claude-signaling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P Claude Code Signaling Server - WebSocket SDP Exchange"

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
dashmap.workspace = true
uuid.workspace = true
